stateDiagram-v2
    [*] --> REQUEST_RECEIVED
    REQUEST_RECEIVED --> ROUTE_MATCHED: MATCH_ROUTE
    ROUTE_MATCHED --> SECURITY_ALLOWED: ALLOW_SECURITY
    SECURITY_ALLOWED --> CONTROLLER_DISPATCHED: DISPATCH_CONTROLLER
    CONTROLLER_DISPATCHED --> RESPONSE_SENT: SEND_RESPONSE
    RESPONSE_SENT --> [*]

    ROUTE_MATCHED --> SECURITY_DENIED: DENY_SECURITY
    SECURITY_DENIED --> RESPONSE_SENT: SEND_403
